--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ AIRFLOW_IMAGE_NAME=apache/airflow:2.9.2
 AIRFLOW_UID=50000
 
 # SMTP Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_STARTTLS=True
-SMTP_SSL=False
-SMTP_USER=rafaelqsantos33@gmail.com
-SMTP_PASSWORD=cfls khzm svia zbnt
-SMTP_PORT=587
-SMTP_MAIL_FROM=Airflow
+SMTP_HOST=
+SMTP_STARTTLS=
+SMTP_SSL=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_PORT=
+SMTP_MAIL_FROM=
